# qulf

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  biome.json  main.py  mise.toml  pyproject.toml  requirements.txt  zLayout.kdl
.github/workflows/: ci.yml  publish.yml  release-pypi.yml  release-testpypi.yml  release.yml
src/qulf/: __init__.py  config.py  core.py  crypto.py  exceptions.py  py.typed  rate_limit.py  routing.py  types.py
src/qulf/adapters/: __init__.py  base.py  motor.py  sqlalchemy.py  sqlmodel.py
src/qulf/frameworks/: base.py  django.py  fastapi.py  litestar.py
src/qulf/plugins/: __init__.py  base.py  magic_link.py  oauth.py  rate_limit.py  session.py  totp.py
src/qulf/providers/: __init__.py  base.py  github.py  google.py
src/qulf/rate_limit/: __init__.py  base.py  config.py  fixed_window.py  sliding_window.py  token_bucket.py
tests/: conftest.py  test_core.py  test_fastapi.py  test_framework_django.py  test_framework_litestar.py  test_magic_link.py  test_motor.py  test_oauth.py  test_oauth_edge_cases.py  test_plugin_lifecycle.py  test_providers.py  test_rate_limit.py  test_schema_injection.py  test_session_management.py  test_sqlalchemy.py  test_sqlmodel.py  test_totp.py
tests/smoke/: test_public_api.py
