[project]
name = "qulf"
version = "0.1.0b1"
description = "A framework and ORM agnostic, plugin-driven authentication library for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "argon2-cffi>=25.1.0",
    "brevo-python>=4.0.10",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "pydantic[email,timezone]>=2.13.4",
    "pyjwt>=2.13.0",
    "pyotp>=2.10.0",
    "python-settings>=0.2.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.48.0",
]

authors = [
    { name = "Kaleb Abebe", email = "kaleba647@gmail.com" },
    { name = "Peter Kinfe", email = "peterkinfe360@gmail.com" },
]

[project.optional-dependencies]
dev = ["ruff>=0.3.0", "mypy>=1.8.0"]
test = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "pytest-asyncio>=0.23.0"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
python_version = "3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "commitizen>=4.16.4",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "respx>=0.23.1",
]

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

classifiers = ["Library :: Python :: 3", "Operating System :: OS Independent"]

[project.urls]
Homepage = "https://github.com/qulflabs/qulf"
Issues = "https://github.com/qulflabs/qulf/issues"


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
