[project]
dependencies = [
  "argon2-cffi>=25.1.0",
  "brevo-python>=4.0.10",
  "fastapi>=0.136.3",
  "pydantic-settings>=2.14.1",
  "pydantic[email,timezone]>=2.13.4",
  "pyjwt>=2.13.0",
  "pyotp>=2.10.0",
  "python-settings>=0.2.3",
  "sqlalchemy>=2.0.49",
  "uvicorn>=0.48.0",
]
description = "A framework and ORM agnostic, plugin-driven authentication library for Python."
license = "MIT"
license-files = ["LICENSE"]
name = "qulf"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0b1"

authors = [
  {name = "Kaleb Abebe", email = "kaleba647@gmail.com"},
  {name = "Peter Kinfe", email = "peterkinfe360@gmail.com"},
]

[project.optional-dependencies]
dev = ["ruff>=0.3.0", "mypy>=1.8.0"]
django = [
  "django>=4.2",
  "django-stubs>=5.2",
]
litestar = ["litestar>=2.0.0"]
redis = ["redis>=5.0.0"]
sqlmodel = ["sqlmodel>=0.0.21"]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "coverage",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.28,<1",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "default",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "aiosqlite>=0.22.1",
  "commitizen>=4.16.4",
  "fakeredis[lua]>=2.20.0",
  "httpx>=0.28.1",
  "pre-commit>=4.6.0",
  "redis>=5.0.0",
  "respx>=0.23.1",
  "sqlmodel>=0.0.21",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build >= 0.11.7, <0.12.0"]

classifiers = ["Library :: Python :: 3", "Operating System :: OS Independent"]

[project.urls]
Homepage = "https://github.com/qulflabs/qulf"
Issues = "https://github.com/qulflabs/qulf/issues"

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
  "pyproject.toml:version",
]
version_provider = "pep621"
version_scheme = "pep440"
