[project]
dependencies = [
  "argon2-cffi>=25.1.0",
  "pydantic-settings>=2.14.1",
  "pydantic[email,timezone]>=2.13.4",
  "pyjwt>=2.13.0",
  "pyotp>=2.10.0",
  "python-settings>=0.2.3",
]
description = "A framework and ORM agnostic, plugin-driven authentication library for Python."
license = "MIT"
license-files = ["LICENSE"]
name = "qulf"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0b2"

authors = [
  {name = "Kaleb Abebe", email = "kaleba647@gmail.com"},
  {name = "Peter Kinfe", email = "peterkinfe360@gmail.com"},
]

[project.optional-dependencies]
django = ["django>=4.2"]
fastapi = ["fastapi>=0.136.3"]
litestar = ["litestar>=2.0.0"]
motor = ["motor>=3.0"]
redis = ["redis>=5.0.0"]
sqlmodel = ["sqlmodel>=0.0.21"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "default",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "ruff",
  "mypy",
  "commitizen",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "fakeredis[lua]",
  "mongomock-motor",
  "httpx",
  "django-stubs",
  "django",
  "fastapi",
  "litestar",
  "motor",
  "redis",
  "sqlmodel",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build >= 0.11.7, <0.12.0"]

classifiers = ["Library :: Python :: 3", "Operating System :: OS Independent"]

[project.urls]
Homepage = "https://github.com/qulflabs/qulf"
Issues = "https://github.com/qulflabs/qulf/issues"

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
  "pyproject.toml:version",
]
version_provider = "pep621"
version_scheme = "pep440"
